# vsc-main

./: CMakeLists.txt  mainApp.cpp  mainApp.h  myframe.cpp  myframe.h
